tests/errors/extraneous_arg_type.ceos
_(a: String) {
  print(a : String)
}("ASD")
